# trdinger

./: .coverage  .cspell.json  .eslintrc.json  .gitignore  AGENTS.md  API.md  AUTOML_FEATURE_ENGINEERING_ENHANCEMENT_PLAN.md  AUTO_STRATEGY_ANALYSIS.md  AUTO_STRATEGY_TEST_REPORT.md  BACKTESTING_PY_COMPREHENSIVE_ANALYSIS_REPORT.md  BACKTESTING_PY_IMPLEMENTATION_CHECKLIST.md  BACKTESTING_PY_IMPROVEMENT_IMPLEMENTATION_REPORT.md  BACKTEST_IMPLEMENTATION_REPORT.md  BACKTEST_OPTIMIZATION_IMPLEMENTATION_GUIDE.md  CLAUDE.md  COMPREHENSIVE_BACKTEST_TEST_REPORT.md  CONTRIBUTING.md  FINAL_ERROR_HANDLING_CHECK.md  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  GEMINI.md  IMPLEMENTATION_PLAN.md  ML_CODEBASE_REVIEW.md  ML_OPTIMIZATION_MIGRATION_PLAN.md  ML_PIPELINE_OVERVIEW.md  ML_REFACTORING_PLAN.md  ML_REFACTORING_SUGGESTIONS.md  PLAN.md  README.md  REFACTORING_CANDIDATES.md  REFACTORING_REPORT.md  RL_IMPLEMENTATION_PLAN.md  TA_LIB_MIGRATION_PLAN.md  TA_LIB_MIGRATION_REPORT.md  TECHNICAL_INDICATORS_PLAN.md  _MConverter.eu_ビットコイン先物スタッキングモデル選定.md  actual_feature_importance_report.md  auto_strategy_condition_fix_plan.md  auto_strategy_enhancement_plan.md  auto_strategy_integration_plan.md  auto_strategy_refactor_plan.md  (+62 more)
backend/: .coverage  .env.example  .flake8  BACKTEST_RESULT_SAVING_FIX.md  CODEBASE_SIMPLIFICATION_ANALYSIS.md  CODE_REFACTORING_SUGGESTIONS.md  Dockerfile  ERROR_HANDLING_RECOMMENDATION.md  FEATURE_ENGINEERING_OPTIMIZATION_PLAN.md  FINAL_SIMPLIFICATION_REPORT.md  ML_FAKEOUT_DETECTION_PLAN.md  MULTI_STRATEGY_OPTIMIZATION_REPORT.md  OPTIMIZATION_AND_TEST_ORGANIZATION_REPORT.md  README.md  REFACTORING_PLAN.md  REFACTORING_PROPOSAL.md  REFACTORING_PROPOSAL_PHASE2.md  REFACTORING_RECOMMENDATIONS.md  SINGLE_MODEL_TRAINER_REMOVAL.md  __init__.py  alembic.ini  analyze_all_indicators.py  analyze_feature_importance.py  backend_refactoring_analysis.md  backtest_runner.py  benchmark_all_features.py  check_indicators.py  check_pandas_ta_functions.py  cleanup_duplicate_tests.py  code_duplication_analysis.md  comprehensive_auto_strategy_test.py  comprehensive_oi_fr_test.py  config.py  conftest.py  create_open_interest_table.py  custom_slope.py  debug_15m_issue.py  debug_failed_indicators.py  debug_funding_rate.py  debug_import.py  (+106 more)
backend/alembic/: env.py
backend/app/: __init__.py  main.py  types.py
backend/auto_strategy_backup_20250908/: auto_strategy.py
backend/backtest/: __init__.py  runner.py
backend/benchmarks/: benchmark_auto_strategy.py  benchmark_evaluation_data_comparison.py  benchmark_fitness_comparison.py  benchmark_ga_engine.py  benchmark_gene_generator_comparison.py  benchmark_integrated.py  benchmark_integration_test.py  benchmark_other_components.py  benchmark_parallel_comparison.py
backend/data_collector/: __init__.py  collector.py  external_market_collector.py
backend/database/: __init__.py  connection.py  models.py  repository.py  types.py
backend/docs/: AUTO_STRATEGY_ANALYSIS.md  AUTO_STRATEGY_COMPLETED.md  AUTO_STRATEGY_ENHANCEMENT_PLAN.md  AUTO_STRATEGY_PHASE4_ROADMAP.md  CLASSIFICATION_OPTIMIZATION_REPORT.md  CLASSIFICATION_OPTUNA_RESULTS.md  DATABASE_AUTO_INITIALIZATION.md  ENHANCED_AUTO_STRATEGY_OPERATION_GUIDE.md  FEATURE_OPTIMIZATION_REPORT.md  HYPERPARAMETER_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ML_WORKFLOW.md  ML_WORKFLOW_DOCUMENTATION.md  MLトレーディングモデルのラベリング手法.md  MLパイプライン全体最適化計画.md  ML改善計画.md  OPTUNA_OPTIMIZATION_REPORT.md  ORDER_EXECUTION_AND_TPSL_PLAN.md  Optuna最適化ガイド.md  SEED_STRATEGY_DESIGN.md  TRADING_PAIRS_UPDATE.md  agent_design.md  auto_strategy_refactoring_plan.md  auto_strategy_verification_report.md  comprehensive_ml_improvement_report.md  current_talib_usage_inventory.md  ensemble_optimization_config_example.md  ensemble_optimization_implementation_summary.md  feature_engineering_enhancement_plan.md  feature_profile_usage.md  full_scratch_review.md  indicator_config_unification.md  indicator_json_format.md  indicators_migration_plan.md  long_short_balance_improvement_plan.md  ml_integration_plan.md  ml_refactor_plan.md  ml_training_workflow.md  ml_workflow.md  refactoring_suggestions.md  (+10 more)
backend/models/: lightgbm_20260331.meta.json  lightgbm_20260331_01.meta.json  lightgbm_20260331_02.meta.json  lightgbm_20260331_03.meta.json  ml_training_model_20250712_193722.pkl
backend/reports/: auto_strategy_bug_report.txt  auto_strategy_sample_report.md  auto_strategy_year_synthetic_report.md  comprehensive_all_indicators_report.txt  comprehensive_auto_strategy_bugs.txt
backend/routers/: market_data.py
backend/scripts/: __init__.py  all_58_indicators_test.json  analyze_feature_importance.py  analyze_price_change_distribution.py  analyze_real_data.py  analyze_verification_results.py  backtest_meta_strategy.py  check_available_symbols.py  check_database_status.py  check_endpoints.py  check_latest_results.py  check_ls_ratio_history.py  check_stats.py  check_talib.py  clean_invalid_strategy_genes.py  clear_ohlcv_data.py  collect_btcusdt_multi_timeframe.py  collect_historical_data.py  collect_ohlcv_data.py  compare_seed_effect.py  comparison_result.json  complete_test_results.json  comprehensive_test.py  create_effective_features.py  create_sample_auto_strategies.py  create_sample_data.py  debug_capital_fix.py  debug_condition_evaluation.py  debug_ga_execution.py  debug_generated_strategy.py  debug_indicator_registry.py  debug_indicator_validation.py  debug_invalid_conditions.py  debug_mtf_evolution.py  debug_realistic_strategy.py  debug_stats.py  debug_strategy.py  debug_strategy_details.py  debug_strategy_execution.py  debug_strategy_validation.py  (+90 more)
backend/tests/: ACCURACY_AND_STRATEGY_SWITCHING_REPORT.md  BACKTEST_TEST_REPORT.md  COMPREHENSIVE_BACKTEST_TEST_REPORT.md  CURRENT_STATUS_REPORT.md  FINAL_COMPREHENSIVE_TEST_REPORT.md  README.md  TECHNICAL_INDICATORS_TEST_REPORT.md  __init__.py  advanced_features_test.py  check_short_trades.py  check_stc_params.py  check_talib.py  cmo_test.py  compatibility_test.py  comprehensive_indicator_test.py  comprehensive_integration_test.py  comprehensive_position_sizing_test.py  comprehensive_test.py  (+313 more)
(+3238 files in other folders)
