[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trdinger-backend"
version = "1.0.0"
description = "Trdinger Trading API Backend"
authors = [
    {name = "Trdinger Development Team", email = "dev@trdinger.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas",
    "numpy",
    "ccxt==4.1.64",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.2",
    "httpx",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",
    "deap>=1.3.1",
    "backtesting>=0.6.4",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov",
    "httpx",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--durations=10",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (may take more than 10 seconds)",
    "backtest: Backtest related tests",
    "performance: Performance tests",
    "error_handling: Error handling tests",
    "edge_cases: Edge case tests",
    "accuracy: Accuracy and precision tests",
    "strategy_switching: Strategy switching tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning:backtesting.*",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "backtest", "data_collector", "scripts"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
