[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trdinger-backend"
version = "1.0.0"
description = "Trdinger Trading API Backend"
authors = [
    {name = "Trdinger Development Team", email = "dev@trdinger.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # データ分析・数値計算
    "pandas",
    "pandas-ta",
    "numpy",
    "psutil",
    "pandera",

    # 暗号通貨取引所ライブラリ
    "ccxt==4.1.64",

    # データベース関連
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",

    # 環境変数管理
    "python-dotenv==1.0.0",

    # YAML処理ライブラリ
    "PyYAML>=6.0",

    # Webフレームワーク・サーバー
    "fastapi==0.104.1",
    "uvicorn==0.24.0",

    # データバリデーション
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",

    # HTTPクライアント
    "httpx",

    # データ分析・可視化ライブラリ
    "seaborn>=0.11.0",
    "yfinance>=0.2.18",

    # バックテストライブラリ
    "backtesting>=0.6.4",

    # 遺伝的アルゴリズムライブラリ
    "deap>=1.3.1",

    # 機械学習ライブラリ
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "hmmlearn>=0.3.0",

    # ハイパーパラメータ最適化ライブラリ
    "optuna>=3.4.0",
    "optuna-dashboard>=0.13.0",

    # AutoML特徴量エンジニアリングライブラリ
    "dask>=2023.10.0",

    # メモリ管理ライブラリ
    "memory_profiler>=0.61.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov",
    "httpx",
]
dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]


[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "backtest", "scripts"]

[tool.setuptools]
packages = ["app"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
