
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trdinger-backend"
version = "1.0.0"
description = "Trdinger Trading API Backend"
authors = [
    {name = "Trdinger Development Team", email = "dev@trdinger.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # データ分析・数値計算
    "pandas",
    "pandas-ta-classic>=0.3.59",
    "numpy>=1.24.0",
    "scipy>=1.14.0",
    "psutil",
    "pandera",

    # 暗号通貨取引所ライブラリ
    "ccxt==4.1.64",

    # データベース関連
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.23",
    "alembic==1.13.1",

    # 環境変数管理
    "python-dotenv==1.0.0",

    # YAML処理ライブラリ
    "PyYAML>=6.0",

    # Webフレームワーク・サーバー
    "fastapi>=0.121.1",
    "uvicorn==0.24.0",

    # データバリデーション
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",

    # HTTPクライアント
    "httpx>=0.28.1",

    # データ分析・可視化ライブラリ
    "seaborn>=0.11.0",
    "yfinance>=0.2.18",

    # バックテストライブラリ
    "backtesting>=0.6.4",

    # 遺伝的アルゴリズムライブラリ
    "deap>=1.3.1",

    # 機械学習ライブラリ
    "scikit-learn==1.7.2",
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "hmmlearn>=0.3.0",
    "catboost>=1.2",
    "torch>=2.0.0",

    # ハイパーパラメータ最適化ライブラリ
    "optuna>=3.4.0",
    "optuna-dashboard>=0.13.0",

    # AutoML特徴量エンジニアリングライブラリ
    "dask>=2023.10.0",

    # メモリ管理ライブラリ
    "memory_profiler>=0.61.0",

    # 不均衡データ対策ライブラリ
    "imbalanced-learn>=0.11.0",

    # 高速化ライブラリ
    "numba>=0.60.0",

    # 非同期DNSリゾルバの互換性維持
    "pycares<5.0.0",

    # AI Agent関連
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-core>=0.3.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov",
    "pytest-env",
    "httpx",
    "pyright",
]
dev = [
    "mypy",
    "pyright",
    "ruff",
]


[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".mypy_cache",
    ".tox",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501", # line-length is handled by ruff format
    "B904", # Within an except clause, raise exceptions with raise ... from err
    "B017", # Do not assert blind exception: Exception
    "B905", # zip() without an explicit strict= parameter
    "B008", # Do not perform function call Depends in argument defaults (FastAPI)
    "B024", # Abstract base class without abstract methods
    "B027", # Abstract base class empty method has no abstract decorator
    "UP007", # Use X | Y for type annotations
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app", "database", "backtest", "scripts"]

[tool.setuptools]
packages = ["app"]

[tool.mypy]
mypy_path = "."
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]



[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["app", "tests"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "**/venv",
    "**/build",
    "**/dist",
    "**/.eggs",
    "**/*.egg-info",
]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportMissingParameterType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
reportUntypedBaseClass = false
reportPrivateUsage = false
reportConstantRedefinition = false
reportIncompatibleMethodOverride = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = false
reportPrivateImportUsage = false
reportUnsupportedDunderAll = false

